--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -23,13 +23,11 @@ $breakpoint-large: 768px;
 
 .actions {
   position: relative;
-  width: 80%;
-  max-width: 1000px;
+  width: 85%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
+
   & button:hover {
     cursor: pointer;
   }
@@ -41,23 +39,51 @@ $breakpoint-large: 768px;
   }
 }
 
-.gameGridTitle {
-  font-family: roboto condensed, sans-serif;
-  font-size: 3em;
-  font-weight: 200;
-  text-transform: uppercase;
-  letter-spacing: -0.015em;
-  margin: 0;
+.fourWeekLabel {
+  flex: 0 0 25%;
+  max-width: 25%;
+
+  .fourWeekTitle {
+    font-family: roboto condensed, sans-serif;
+    font-size: 1.5em;
+    font-weight: 100;
+    text-transform: uppercase;
+    letter-spacing: -0.015em;
+    position: absolute;
+  }
 }
 
-.prevNextButtons {
+.gameGridHeaderContent {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  gap: 1rem;
-  width: 50%;
+  width: 95%;
 }
 
+.gameGridHeader {
+  flex: 0 0 75%;
+  max-width: 75%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .gameGridTitle {
+    font-family: roboto condensed, sans-serif;
+    font-size: 3em;
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: -0.015em;
+    margin: 0;
+  }
+
+  .prevNextButtons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+    width: 50%;
+  }
+}
 .spanColorBlue {
   color: #07aae2;
 }
@@ -111,19 +137,26 @@ $breakpoint-large: 768px;
   border-radius: 8px;
 }
 
+.mainGridContainer {
+  width: 85%;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+}
+
 .gridWrapper {
-  margin-top: 10px;
+  display: flex;
+  flex: 0 0 75%;
+  max-width: 75%;
 }
 
 .scheduleGrid {
-  margin: 0 auto;
   color: white;
   border: 5px solid #ffffff;
   border-spacing: 0px;
   font-size: 14px;
   text-align: left;
-  width: 80%;
-  max-width: 1000px;
+  width: 95%;
 }
 
 .scheduleGrid th {
@@ -377,10 +410,237 @@ $breakpoint-large: 768px;
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  .mainGridContainer {
+    width: 100%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-direction: column;
+  }
+
+  .dateButtonPrev {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonPrev:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+
+  .dateButtonNext {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonNext:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 40px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+
+  .scheduleGrid {
+    width: 100%;
+    border: 2px solid white;
+    border-radius: 0;
+    overflow-x: scroll;
+  }
+
+  .scheduleGrid tr {
+    height: 35px;
+  }
+
+  .gameGridTitle {
+    font-size: 1.5em;
+    width: 100%;
+  }
+
+  .actions {
+    width: 100%;
+  }
+
+  .dateButtonMode {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 6px;
+  }
+
+  .gridWrapper {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .fourWeekLabel {
+    display: none;
+  }
+
+  .gameGridHeader {
+    flex: 0 0 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+
+    .gameGridTitle {
+      font-size: 2em;
+      width: 100%;
+    }
+
+    .prevNextButtons {
+      width: 50%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.75rem;
+    }
+  }
+
+  .totalGamesPerDayRow {
+    border-bottom: 0.5px solid white;
+  }
+
+  .scheduleGrid th {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+  }
+
+  .scheduleGrid tr th:first-child,
+  .scheduleGrid tr td:first-child {
+    max-width: 50px !important;
+    min-width: 45px;
+    font-size: 1em;
+    border-right: 3px solid #07aae2;
+  }
+
+  .scheduleGrid tr th:nth-child(n + 2),
+  .scheduleGrid td:nth-child(n + 2) {
+    font-family: roboto condensed, sans-serif;
+    padding: 6px 6px;
+    min-width: 30px;
+    max-width: 50px;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr th:nth-child(10),
+  .scheduleGrid tr td:nth-child(9),
+  .scheduleGrid tr td:nth-child(10) {
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr th:nth-child(10),
+  .scheduleGrid tr th:nth-child(11) {
+    font-family: roboto condensed, sans-serif;
+    padding: 2px 2px;
+    min-width: 30px;
+    max-width: 35px;
+    text-align: center;
+    font-size: 1em;
+    padding-bottom: 8px;
+  }
+
+  .blurredImage {
+    filter: blur(4px); // Adjust the blur amount as needed
+  }
+
+  .scoreAndHomeAway {
+    display: none;
+  }
+
+  .homeAway {
+    display: none;
+  }
+
+  .hideOnMobile {
+    display: none;
+  }
+
+  /* MAGGIE <3 */
+
+  .mobileLogoSize {
+    padding: 1.5px !important;
+  }
+
+  .mobileFontStyle {
+    font-family: "Roboto Condensed", sans-serif !important;
+    font-size: 1em !important;
+    margin-bottom: 7px !important;
+  }
+
+  .score {
+    display: none;
+  }
+
+  .totalGamesPerDayCell {
+    background-color: #000;
+    color: white;
+  }
+
+  .totalGamesPerDayRow > .title::before {
+    content: "GP/Day";
+  }
+
+  .teamRow {
+    .teamName {
+      display: none;
+    }
+  }
+
+  .fourWeekLabel {
+    display: none;
+  }
+
+  .fourWeekTitle {
+    display: none;
+  }
+}
+
 @media only screen and (min-width: $screen-medium) and (max-width: $screen-large) {
   .teamRow {
     .teamName {
-      display: block;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     .teamAbbreviation {
       display: none;
@@ -394,6 +654,15 @@ $breakpoint-large: 768px;
 
 @media (max-width: 480px) {
   /* portrait */
+
+  .mainGridContainer {
+    width: 100%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-direction: column;
+  }
 
   .dateButtonPrev {
     font-family: roboto condensed, sans-serif;
@@ -469,14 +738,6 @@ $breakpoint-large: 768px;
     width: 100%;
   }
 
-  .prevNextButtons {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0.75rem;
-  }
-
   .dateButtonMode {
     font-family: roboto condensed, sans-serif;
     position: relative;
@@ -492,7 +753,33 @@ $breakpoint-large: 768px;
 
   .gridWrapper {
     width: 100%;
-    margin-top: 20px;
+    max-width: 100%;
+  }
+
+  .fourWeekLabel {
+    display: none;
+  }
+
+  .gameGridHeader {
+    flex: 0 0 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+
+    .gameGridTitle {
+      font-size: 2em;
+      width: 100%;
+    }
+
+    .prevNextButtons {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.75rem;
+    }
   }
 
   .totalGamesPerDayRow {
@@ -587,6 +874,30 @@ $breakpoint-large: 768px;
     .teamName {
       display: none;
     }
+  }
+}
+
+@media (max-width: 360px) {
+  .scheduleGrid tr th:nth-child(n + 2),
+  .scheduleGrid td :nth-child(n + 2) {
+    font-size: 8px;
+    min-width: 25px;
+    max-width: 25 px;
+  }
+
+  .scheduleGrid tr th:first-child,
+  .scheduleGrid tr td:first-child {
+    max-width: 40px !important;
+    min-width: 30px;
+    font-size: 10px;
+    border-right: 3px solid #07aae2;
+    padding: 4px;
+    font-size: 0.5em;
+  }
+
+  .gameGridTitle {
+    font-size: 1em !important;
+    width: 100%;
   }
 }
 
