--- a/web/components/WiGO/NameSearchBar.module.scss
+++ b/web/components/WiGO/NameSearchBar.module.scss
@@ -7,23 +7,25 @@
 
 .searchInput {
   width: 100%;
+  height: 100%;
   padding: 8px 12px;
-  border: 2px solid #202020;
+  border: 2px solid #808080;
   font-size: 16px;
   box-sizing: border-box;
-  background-color: #303030;
+  background-color: #606060;
   border-radius: 6px 6px 0px 0px;
-  color: #707070;
   font-family: roboto condensed, sans-serif;
 }
 
 .searchInput:focus {
   outline: none;
+  color: #fff;
   border-color: #07aae2;
 }
 
 .dropdown {
   position: absolute;
+  color: #fff;
   top: 100%;
   left: 0;
   right: 0;
