--- a/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
+++ b/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
@@ -62,10 +62,12 @@
       color: white;
     }
 
-    & li:global.Mui-focused {
-      background-color: $primary-color;
-      color: white;
-      cursor: "pointer";
+    & li {
+      &:global(.Mui-focused) {
+        background-color: $primary-color;
+        color: white;
+        cursor: pointer;
+      }
     }
 
     & li:hover {
