new scss remove @import change to @use

--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -1,4 +1,4 @@
-@import "styles/vars.scss";
+@use "styles/vars" as *;
 
 .banner {
   color: #ffffff;
@@ -47,30 +47,22 @@
 }
 
 @media (max-width: 480px) {
-
   .textBanner {
     font-family: roboto condensed, sans-serif;
     border-bottom: 2px solid white;
-
   }
 }
 
-@media screen and (orientation:landscape) /* LANDSCAPE */
-and (min-device-width: 479px) 
-and (max-device-width: 932px) {
-
+@media screen and (orientation: landscape) /* LANDSCAPE */ and (min-device-width: 479px) and (max-device-width: 932px) {
   .textBanner {
     font-family: roboto condensed, sans-serif;
     border-bottom: 4px solid white;
-
   }
 }
 
-@media screen and (orientation:landscape) 
-and (min-device-width: 479px) 
-and (max-device-width: 932px) {
-
-  .banner, .textBanner {
+@media screen and (orientation: landscape) and (min-device-width: 479px) and (max-device-width: 932px) {
+  .banner,
+  .textBanner {
     padding-top: 6.67px; // Two-thirds of 10px
     padding-bottom: 6.67px; // Two-thirds of 10px
     font-family: roboto condensed, sans-serif;
@@ -79,7 +71,8 @@ and (max-device-width: 932px) {
 }
 
 @media (max-width: 480px) {
-  .banner, .textBanner {
+  .banner,
+  .textBanner {
     padding-top: 6.67px; // Two-thirds of 10px
     padding-bottom: 6.67px; // Two-thirds of 10px
     font-family: roboto condensed, sans-serif;
