--- a/web/components/Layout/MobileMenu/MobileMenu.module.scss
+++ b/web/components/Layout/MobileMenu/MobileMenu.module.scss
@@ -1,5 +1,5 @@
-@import "styles/vars.scss";
-@import "../Header/Header.module.scss";
+@use "styles/vars" as *;
+@use "../Header/Header.module" as *;
 
 // mobile menu
 .menu {
