replace @import with @use

--- a/web/components/DateRangeMatrix/index.module.scss
+++ b/web/components/DateRangeMatrix/index.module.scss
@@ -1,6 +1,6 @@
 // C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\components\DateRangeMatrix\index.module.scss
 
-@import "styles/vars.scss";
+@use "styles/vars";
 
 .gridWrapper {
   display: flex;
