--- a/web/styles/Post.module.scss
+++ b/web/styles/Post.module.scss
@@ -1,7 +1,7 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 // C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\styles\Post.module.scss
 
-@import "styles/vars.scss";
+@use "styles/vars";
 
 .postPage {
   margin-top: 1rem;
