--- a/web/components/BlogPost/BlogPost.module.scss
+++ b/web/components/BlogPost/BlogPost.module.scss
@@ -1,7 +1,7 @@
 ///////////////////////////////////////////////////////////////////////////////////////////
 // C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\components\BlogPost\BlogPost.module.scss
 
-@import "styles/vars.scss";
+@use "styles/vars";
 
 .post {
   outline: 3px solid white;
