--- a/web/styles/Blog.module.scss
+++ b/web/styles/Blog.module.scss
@@ -1,7 +1,7 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 // C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\styles\Blog.module.scss
 
-@import "styles/vars.scss";
+@use "styles/vars";
 
 .posts {
   display: grid;
