--- a/web/styles/ShiftChart.module.scss
+++ b/web/styles/ShiftChart.module.scss
@@ -1,4 +1,4 @@
-@import "styles/vars.scss";
+@use "styles/vars";
 
 /* ShiftChart.module.scss */
 /* /workspaces/fhfhockey.com/web/styles/ShiftChart.module.scss */
