adding "vars." to scss variables

--- a/web/components/BlogPost/BlogPost.module.scss
+++ b/web/components/BlogPost/BlogPost.module.scss
@@ -52,7 +52,7 @@
       line-clamp: $lines;
       -webkit-box-orient: vertical;
 
-      @media only screen and (min-width: $screen-medium) {
+      @media only screen and (min-width: vars.$screen-medium) {
         $lines: 10;
         -webkit-line-clamp: $lines;
         line-clamp: $lines;
