--- a/web/components/Comments/Comments.module.scss
+++ b/web/components/Comments/Comments.module.scss
@@ -1,3 +1,5 @@
+// /Users/tim/Desktop/FHFH/fhfhockey.com/web/components/Comments/Comments.module.scss
+
 @use "styles/vars";
 
 .comments {
@@ -18,7 +20,7 @@
     .content {
       border: 2px solid white;
       padding: 0.3rem;
-      background-color: $bg-light;
+      background-color: vars.$bg-light;
     }
     .footer {
       display: flex;
