--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -1,3 +1,5 @@
+// /Users/tim/Desktop/FHFH/fhfhockey.com/web/styles/vars.scss
+
 /* https://docs.microsoft.com/en-us/windows/apps/design/layout/screen-sizes-and-breakpoints-for-responsive-design */
 
 $screen-small-max: 640px; /* handset */
