--- a/web/components/Chart/Chart.module.scss
+++ b/web/components/Chart/Chart.module.scss
@@ -1,3 +1,5 @@
+// /Users/tim/Desktop/FHFH/fhfhockey.com/web/components/Chart/Chart.module.scss
+
 @use "styles/vars";
 @import "styles/Charts.module.scss";
 
@@ -5,7 +7,7 @@
   .header {
     margin-bottom: 0.5rem;
 
-    @media only screen and (min-width: $screen-large) {
+    @media only screen and (min-width: vars.$screen-large) {
       margin-bottom: 1rem;
     }
   }
