--- a/web/components/CommentForm/CommentForm.module.scss
+++ b/web/components/CommentForm/CommentForm.module.scss
@@ -1,3 +1,5 @@
+// /Users/tim/Desktop/FHFH/fhfhockey.com/web/components/CommentForm/CommentForm.module.scss
+
 @use "styles/vars";
 
 .form {
@@ -8,7 +10,7 @@
   }
   .contentWrapper {
     border: 2px solid white;
-    background-color: $bg-light;
+    background-color: vars.$bg-light;
     color: white;
     padding: 0.3rem;
     .name {
