--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -15,7 +15,7 @@ $small: 6px;
 
   // Dashboard
   .dashboard {
-    background-color: $bg-light;
+    background-color: vars.$bg-light;
     border: 3px solid white;
     margin-bottom: 10vh;
 
