scss updates "vars." added to a few spots

--- a/web/components/ChartTitle/ChartTitle.module.scss
+++ b/web/components/ChartTitle/ChartTitle.module.scss
@@ -14,7 +14,7 @@
   }
 
   &.hightlight {
-    color: $primary-color;
+    color: vars.$primary-color;
     font-family: "Roboto Condensed";
     margin-left: 0.1rem;
   }
