--- a/web/components/DateRangeMatrix/index.module.scss
+++ b/web/components/DateRangeMatrix/index.module.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-around;
 
-  @media only screen and (max-width: $screen-medium-max) {
+  @media only screen and (max-width: vars.$screen-medium-max) {
     flex-direction: column;
   }
 }
