--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -393,7 +393,7 @@ $breakpoint-large: 768px;
   background-color: rgba(255, 0, 0, 0.45);
 } /* Red */
 
-@media only screen and (min-width: $screen-large) {
+@media only screen and (min-width: vars.$screen-large) {
   .teamRow {
     .teamName {
       display: flex; /* Ensure Flexbox is applied on large screens */
