--- a/web/components/Chart/Chart.module.scss
+++ b/web/components/Chart/Chart.module.scss
@@ -1,7 +1,7 @@
 // /Users/tim/Desktop/FHFH/fhfhockey.com/web/components/Chart/Chart.module.scss
 
 @use "styles/vars";
-@import "styles/Charts.module.scss";
+@use "styles/Charts.module";
 
 .container {
   .header {
