--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -635,7 +635,7 @@ $breakpoint-large: 768px;
   }
 }
 
-@media only screen and (min-width: $screen-medium) and (max-width: $screen-large) {
+@media only screen and (min-width: vars.$screen-medium) and (max-width: vars.$screen-large) {
   .teamRow {
     .teamName {
       display: flex;
