--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -9,7 +9,7 @@
 
   padding-top: 10px;
   padding-bottom: 10px;
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: vars.$screen-large) {
     margin-bottom: 10px;
     border-bottom: 4px solid white;
 
@@ -31,7 +31,7 @@
   & > h1 {
     margin: 0;
   }
-  @media only screen and (max-width: $screen-medium-max) {
+  @media only screen and (max-width: vars.$screen-medium-max) {
     padding: 0.3rem;
 
     & > h1 {
@@ -39,7 +39,7 @@
     }
   }
 
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: vars.$screen-large) {
     padding: 0.8rem;
 
     margin-bottom: 15px;
