--- a/web/components/LineCombinations/CategoryTitle/CategoryTitle.module.scss
+++ b/web/components/LineCombinations/CategoryTitle/CategoryTitle.module.scss
@@ -41,7 +41,7 @@
   }
 }
 
-@media only screen and (min-width: $screen-large) {
+@media only screen and (min-width: vars.$screen-large) {
   .categoryTitle.large {
     justify-content: center;
     .line {
