--- a/web/components/LineCombinations/Line/Line.module.scss
+++ b/web/components/LineCombinations/Line/Line.module.scss
@@ -34,7 +34,7 @@
   }
 }
 
-@media only screen and (min-width: $screen-large) {
+@media only screen and (min-width: vars.$screen-large) {
   .container {
     display: flex;
     .title {
