--- a/web/components/RecentPosts/RecentPosts.module.scss
+++ b/web/components/RecentPosts/RecentPosts.module.scss
@@ -2,7 +2,7 @@
 
 .posts {
   .postCard {
-    background-color: $bg-light;
+    background-color: vars.$bg-light;
     border: 3px solid #09a7df;
     padding: 0.7rem 1rem;
     margin-bottom: 1rem;
