--- a/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
+++ b/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
@@ -6,22 +6,22 @@
     display: flex;
     // height: 40px;
     overflow: hidden;
-    border: 3px solid $primary-color;
+    border: 3px solid vars.$primary-color;
     border-radius: 14px;
     // background-color: $bg-dark;
-    background-color: $primary-color;
+    background-color: vars.$primary-color;
 
     input {
       all: unset;
       width: 100%;
       height: 40px;
-      background-color: $bg-dark;
+      background-color: vars.$bg-dark;
       color: rgba(229, 229, 229, 1);
       margin-left: 0px;
       padding-left: 12px;
 
       &::placeholder {
-        color: $primary-color;
+        color: vars.$primary-color;
         font-style: italic;
       }
     }
@@ -30,7 +30,7 @@
       // position: absolute;
       position: relative;
       width: 48px;
-      background-color: $primary-color;
+      background-color: vars.$primary-color;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -49,22 +49,22 @@
     list-style: none;
     overflow-y: scroll;
     max-height: 200px;
-    background-color: $bg-dark;
+    background-color: vars.$bg-dark;
     padding: 5px;
-    border: 1px solid $primary-color;
+    border: 1px solid vars.$primary-color;
     border-radius: 14px;
     padding-left: 0.7rem;
     & li {
       padding: 0.5rem 0;
     }
     & li:active {
-      background-color: $primary-color;
+      background-color: vars.$primary-color;
       color: white;
     }
 
     & li {
       &:global(.Mui-focused) {
-        background-color: $primary-color;
+        background-color: vars.$primary-color;
         color: white;
         cursor: pointer;
       }
