--- a/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
+++ b/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
@@ -43,7 +43,7 @@
     display: none;
   }
 
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: vars.$screen-large) {
     .header {
       margin-bottom: 0.7rem;
     }
