--- a/web/styles/Blog.module.scss
+++ b/web/styles/Blog.module.scss
@@ -7,7 +7,7 @@
   display: grid;
   row-gap: 1.3rem;
 
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: vars.$screen-large) {
     column-gap: 1rem;
     grid-template-columns: 1fr 1fr;
     margin-top: 1rem;
