--- a/web/styles/Post.module.scss
+++ b/web/styles/Post.module.scss
@@ -49,7 +49,7 @@
     display: none;
   }
 
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: vars.$screen-large) {
     display: grid;
     grid-template-columns: 30% 1fr;
     column-gap: 1rem;
