--- a/web/styles/ShiftChart.module.scss
+++ b/web/styles/ShiftChart.module.scss
@@ -146,7 +146,7 @@
 }
 
 .shiftChartTableContainer {
-  @media only screen and (min-width: $screen-medium-max) {
+  @media only screen and (min-width: vars.$screen-medium-max) {
     display: flex;
     justify-content: center;
     align-items: center;
