--- a/web/components/Layout/Container/Container.module.scss
+++ b/web/components/Layout/Container/Container.module.scss
@@ -5,7 +5,7 @@
   flex: 1;
   padding: 0 0.75rem;
   overflow-x: hidden;
-  @media only screen and (min-width: vars.$screen-large) {
+  @media only screen and (min-width: $screen-large) {
     padding: 0 1.5rem;
   }
 }
