--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -20,7 +20,7 @@ $mobile-header-height: 72px;
   // two lines under the header
   &::before {
     content: "";
-    background-color: vars.$primary-color;
+    background-color: $primary-color;
     width: 100%;
     height: 2.5px;
     position: absolute;
@@ -29,7 +29,7 @@ $mobile-header-height: 72px;
   }
   &::after {
     content: "";
-    background-color: vars.$primary-color;
+    background-color: $primary-color;
     width: 100%;
     height: 2.5px;
     position: absolute;
