--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -9,7 +9,7 @@
 
   padding-top: 10px;
   padding-bottom: 10px;
-  @media only screen and (min-width: vars.$screen-large) {
+  @media only screen and (min-width: $screen-large) {
     margin-bottom: 10px;
     border-bottom: 4px solid white;
 
