--- a/web/pages/lines/[abbreviation].module.scss
+++ b/web/pages/lines/[abbreviation].module.scss
@@ -53,7 +53,7 @@
         font-weight: 400;
         font-size: 0.75rem;
         &:hover {
-          color: $primary-color;
+          color: vars.$primary-color;
         }
       }
     }
