--- a/web/styles/Home.module.scss
+++ b/web/styles/Home.module.scss
@@ -555,7 +555,7 @@
 }
 
 .socialMedia {
-  @media only screen and (min-width: vars.$screen-large) {
+  @media only screen and (min-width: $screen-large) {
     display: none;
   }
 }
