took out "NEXT_" in SUPABASE_SERVICE_ROLE_KEY? IDK throwing darts here (158 errors) updated punycode fixed some more SCSS issues

--- a/web/styles/BLSH.module.scss
+++ b/web/styles/BLSH.module.scss
@@ -28,7 +28,7 @@ $border-color: #ccc;
     transition: background-color 0.3s;
 
     &:hover {
-      background-color: lighten($tab-inactive-bg, 5%);
+      background-color: color.adjust($tab-inactive-bg, $lightness: 5%);
     }
 
     &.active {
