adding "@use "sass:color";" to SCSS files - (24 Errors)

--- a/web/styles/BLSH.module.scss
+++ b/web/styles/BLSH.module.scss
@@ -1,4 +1,5 @@
 // SkaterStats.module.scss
+@use "sass:color";
 
 $tab-inactive-bg: #f0e1d2; // Light beige for inactive tabs
 $tab-active-bg: #ffd564; // Yellowish color for the active tab
