--- a/web/styles/Home.module.scss
+++ b/web/styles/Home.module.scss
@@ -1,7 +1,7 @@
 @use "styles/vars" as *;
 
 .homepage {
-  width: 90%;
+  width: 80%;
   margin: auto;
 }
 
@@ -83,6 +83,7 @@
   margin-top: 2em;
   border: #fff 2px solid;
   border-radius: 4px;
+  background-color: #1a1a1a;
 }
 
 .gamesContainer {
@@ -228,12 +229,12 @@
   align-items: center;
   justify-content: space-between;
   border: 2px solid #ddd;
-  border-radius: 4px;
+  border-radius: 10px;
+  overflow: hidden; /* Clipping content to match border radius */
   color: #fff;
   margin-bottom: 15px;
-  height: 4rem;
+  height: 5rem;
 }
-
 .gamesContainer a .gameCard::before {
   content: "";
   position: absolute;
