mobile scss changes

--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -111,4 +111,11 @@ $mobile-header-height: 72px;
       align-items: center;
     }
   }
+
+  @media (max-width: 767px) {
+    .logo {
+      margin: 0; // Remove the auto centering on mobile
+      left: 1%;
+    }
+  }
 }
