--- a/web/components/GameGrid/utils/FourWeekGrid.module.scss
+++ b/web/components/GameGrid/utils/FourWeekGrid.module.scss
@@ -171,6 +171,7 @@
 @media (max-width: 480px) {
   .fourWeekGridContainer {
     max-width: 100%;
+    margin-top: 30px;
   }
 
   .fourWeekGridTable {
