idk why the package.json disappeared

--- a/web/styles/Stats.module.scss
+++ b/web/styles/Stats.module.scss
@@ -175,7 +175,7 @@
   top: -1px;
   left: 50%;
   transform: translateX(-50%);
-  color: #fff;
+  color: #fefefe;
   font-size: 1rem;
   font-weight: 900;
   pointer-events: none;
